[tool.poetry]
name = "pybotx-fsm-example"
version = "0.0.0"
description = "An example of bot with FSM behaviour"
authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
botx = "^0.13.0"
fastapi = "^0.48.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3"
autoflake = "^1.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
